# flake8-testcode

./: .flake8  .gitignore  LICENSE  README-DEV.md  README.md  flake8_missing_assertion.py  packages.txt  pyproject.toml  setup.cfg
.github/workflows/: build.yml  publish.yml
.github/workfows/: build.yml
flake8_testcode/: __init__.py  flake8_missing_assertion.py
tests/: flake8_assertion_checker_test.py  flake8_missing_assertion_test.py  test_test.py
