[metadata]
name = flake8_testcode
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Ewald Verhoeven
url = https://github.com/Ewald91/flake8-testcode
project_urls = 
    Bug Tracker = https://github.com/Ewald91/flake8-testcode/issues
license = MIT
license_files = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = flake8_missing_assertion
python_requires = >=3.7
install_requires = 
    flake8 >= 3.7
    importlib-metadata >= 0.9; python_version<"3.8"

[options.extras_require]
test = pytest>=7.1.3
dev = astpretty==3.0.0

[options.entry_points]
flake8.extension = 
    FMA=flake8_missing_assertion:Plugin
